--- a/myProject/ch1_simpleSetup/package.json
+++ b/myProject/ch1_simpleSetup/package.json
@@ -1,9 +1,31 @@
 {
-    "name": "ch1_simpleSetup",
-    "version": "1.0.0",
-    "description": "Creating a simple of setup using MERN",
-    "main": "index.js",
+    "name": "mern-simplesetup",
+    "version": "2.0.0",
+    "description": "A quick check for your MERN stack installation",
+    "author": "Shama Hoque",
     "license": "MIT",
+    "keywords": [
+        "react",
+        "node",
+        "express",
+        "mongodb",
+        "mern"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/shamahoque/mern-simplesetup.git"
+    },
+    "homepage": "https://github.com/shamahoque/mern-simplesetup",
+    "main": "template.js",
+    "scripts": {
+        "development": "nodemon",
+        "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+        "start": "NODE_ENV=production node ./dist/server.generated.js"
+    },
+    "engines": {
+        "node": "13.12.0",
+        "npm": "6.14.4"
+    },
     "dependencies": {
         "@hot-loader/react-dom": "16.13.0",
         "express": "4.17.1",
@@ -24,5 +46,4 @@
         "webpack-hot-middleware": "2.25.0",
         "webpack-node-externals": "1.7.2"
     }
-
 }
